tests/paczka1/fuzzy1/60379674.err
Error in line 8: S159 A749 84,0
Error in line 19: XhSZnDhS A689 58,1
Error in line 16: gQUhwJw S377 81,4
Error in line 27: vKeAdZ A749 27,85
Error in line 23: XhSZnDhS S377 12,5
Error in line 14: w6T7pnffTX A689 61,0
Error in line 33: vKeAdZ S377 90,8
